@@ -1,23 +1,25 @@
 package es.thalesalv.chatrpg.application.service.usecases;
 
-import es.thalesalv.chatrpg.application.config.MessageEventData;
-import es.thalesalv.chatrpg.application.config.Persona;
+import java.text.MessageFormat;
+import java.util.Collections;
+import java.util.List;
+import java.util.function.Predicate;
+
+import es.thalesalv.chatrpg.application.util.TokenCountingStringPredicate;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Component;
+
 import es.thalesalv.chatrpg.application.service.ModerationService;
-import es.thalesalv.chatrpg.application.service.interfaces.GptModelService;
+import es.thalesalv.chatrpg.application.service.completion.CompletionService;
 import es.thalesalv.chatrpg.domain.exception.DiscordFunctionException;
+import es.thalesalv.chatrpg.domain.model.openai.dto.MessageEventData;
+import es.thalesalv.chatrpg.domain.model.openai.dto.ModelSettings;
 import lombok.RequiredArgsConstructor;
 import net.dv8tion.jda.api.entities.Mentions;
 import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.SelfUser;
 import net.dv8tion.jda.api.entities.channel.unions.MessageChannelUnion;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Component;
-
-import java.text.MessageFormat;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -28,7 +30,7 @@ public class DungeonMasterUseCase implements BotUseCase {
     private static final Logger LOGGER = LoggerFactory.getLogger(DungeonMasterUseCase.class);
 
     @Override
-    public MessageEventData generateResponse(final MessageEventData eventData, final GptModelService model) {
+    public MessageEventData generateResponse(final MessageEventData eventData, final CompletionService model) {
 
         LOGGER.debug("Entered generation of response for RPG. eventData -> {}", eventData);
 
@@ -47,10 +49,8 @@ public class DungeonMasterUseCase implements BotUseCase {
             }
 
             final List<String> messages = handleMessageHistory(eventData);
-
-            final String chatifiedMessage = formatAdventureForPrompt(messages, eventData);
-            moderationService.moderate(chatifiedMessage, eventData)
-                    .subscribe(inputModeration -> model.generate(chatifiedMessage, messages, eventData)
+            moderationService.moderate(messages, eventData)
+                    .subscribe(inputModeration -> model.generate(messages, eventData)
                     .subscribe(textResponse -> moderationService.moderateOutput(textResponse, eventData)
                     .subscribe(outputModeration -> {
                         final Message responseMessage = eventData.getChannel().sendMessage(textResponse).complete();
@@ -63,39 +63,35 @@ public class DungeonMasterUseCase implements BotUseCase {
 
     /**
      * Formats last messages history to give the AI context on the adventure
-     *
      * @param eventData Object containing the event's important data to be processed
+     * @return The list of messages for history
      */
     private List<String> handleMessageHistory(final MessageEventData eventData) {
 
         LOGGER.debug("Entered message history handling for RPG");
-        final Persona persona = eventData.getPersona();
+        final ModelSettings modelSettings = eventData.getChannelConfig().getSettings().getModelSettings();
         final MessageChannelUnion channel = eventData.getChannel();
-        final SelfUser bot = eventData.getBot();
-        List<String> result = channel.getHistory()
-                .retrievePast(persona.getChatHistoryMemory()).complete()
+        final Predicate<Message> skipFilter = skipFilter(eventData);
+        final TokenCountingStringPredicate tokenPredicate = getTokenPredicate(eventData);
+
+        return channel.getHistory()
+                .retrievePast(modelSettings.getChatHistoryMemory()).complete()
                 .stream()
-                .filter(m -> !m.getContentRaw().trim().equals(bot.getAsMention().trim()))
+                .filter(skipFilter)
                 .map(m -> MessageFormat.format("{0} said: {1}",
                         m.getAuthor().getName(), m.getContentDisplay().trim()))
-                .collect(Collectors.toList());
-
-        Collections.reverse(result);
-        return result;
+                .takeWhile(tokenPredicate)
+                .sorted(Collections.reverseOrder())
+                .toList();
     }
 
-    /**
-     * Stringifies messages and turns them into a prompt format
-     * 
-     * @param messages Messages in the chat room
-     * @param eventData Object containing event data
-     * @return Stringified messages for prompt
-     */
-    private String formatAdventureForPrompt(final List<String> messages, final MessageEventData eventData) {
+    private Predicate<Message> skipFilter(final MessageEventData eventData) {
+        final SelfUser bot = eventData.getBot();
+        return m -> !m.getContentRaw().trim().equals(bot.getAsMention().trim());
+    }
 
-        LOGGER.debug("Entered RPG conversation formatter");
-        messages.replaceAll(message -> message.replace(eventData.getBot().getName(), eventData.getPersona().getName()).trim());
-        return MessageFormat.format("{0}\n{1} said: ",
-                String.join("\n", messages), eventData.getPersona().getName()).trim();
+    private TokenCountingStringPredicate getTokenPredicate(final MessageEventData eventData) {
+        final int maxTokens = eventData.getChannelConfig().getSettings().getModelSettings().getMaxTokens();
+        return new TokenCountingStringPredicate(maxTokens);
     }
 }
